--- a/src/emailTemplates/passwordreset.html
+++ b/src/emailTemplates/passwordreset.html
@@ -1,6 +1,6 @@
 <h2>Reset Password</h2>
 
-<p>Follow this link to reset the password on selftaughtdev.com:</p>
+<p>This one's in SRC/EMAILTEMPLATES</p>
 <p>
   <a href="http://localhost:8888/password-reset/#recovery_token={{ .Token }}"
     >Reset Password</a
